# dad-joke-bot

./: .gitignore  README.md  handler.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml  template.serverless.env.yml
src/: .env.template  joke_request.py  request.py  twitter_bot.py
